# penguin-connect

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  excluded_chats.example.json  pyproject.toml  signature_markers.example.json  start.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: HOW_SYNCING_WORKS.md  HOW_THREADING_WORKS.md  PENGUIN_CONNECT.md
scripts/: check.sh  import_contacts.py  install_launchd_penguin_connect_bridge.sh  open_penguin_connect_bridge_terminal.sh  penguin_connect_audit_quote_parsing.py  penguin_connect_backfill.py  penguin_connect_bridge_watchdog.py  penguin_connect_connect.py  penguin_connect_doctor.py  penguin_connect_excluded_chats.py  penguin_connect_local_api.py  penguin_connect_setup.py  penguin_connect_verify_contact_resolution.py  run_penguin_connect_bridge.sh
server/: action_log.py  app.py  browse_sources.py  conversation_exclusions.py  db.py  penguin_connect.py  quoted_content.py  requirements.txt  startup_checks.py  test_action_log.py  test_app_http_integration.py  test_app_status.py  test_channels_imessage.py  test_markdown_links.py  test_penguin_connect.py  test_quoted_content.py  test_scripts.py  test_startup_checks.py  test_sync_integration.py  test_watcher.py  test_whatsapp.py  watcher.py
server/channels/: __init__.py  base.py  imessage.py  whatsapp.py
skills/messaging-channel-integration/: SKILL.md
(+6 files in other folders)
