[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "penguin-connect"
version = "0.1.0"
description = "Local-only macOS bridge that turns Gmail into a control surface for Apple Messages"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "PenguinConnect contributors" }]
keywords = ["gmail", "imessage", "macos", "bridge", "sync"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/hgaddipati1118/penguin-connect"
Repository = "https://github.com/hgaddipati1118/penguin-connect"
Issues = "https://github.com/hgaddipati1118/penguin-connect/issues"
Security = "https://github.com/hgaddipati1118/penguin-connect/security"
Documentation = "https://github.com/hgaddipati1118/penguin-connect/blob/main/docs/PENGUIN_CONNECT.md"
